--- a/src/Pages/newsletter.css
+++ b/src/Pages/newsletter.css
@@ -1,6 +1,71 @@
-#root {
-  margin: 0 ;
+
+@media (max-width: 715px) {
+
+body{
+  background-color: var(--Dark-Slate-Grey);
+  width: 98vw;
+  height: 92vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: roboto ;
+  font-size: 16px;
+}
+
+img.signup{
+  display: none;
+}
+
+img.signup-mobile{
+  width: 100%;
+/*  height: 40%;*/
+}
+
+.container{
+  width: 100vw;
+  max-width: 375px;
+/*  height: 100vh;*/
+  margin: 0;
   padding: 0;
+  display: block;
+  background-color: var(--White);
+}
+
+form{
+  padding: 20px 50px;
+  display: flex;
+  flex-direction: column;
+}
+
+p,label,h1{
+    color: var(--Dark-Slate-Grey);
+  }
+
+  p{
+  margin: 5px 0;
+  }
+
+  input{
+    padding: 10px;
+    border-radius: 5px;
+    border: 3px solid #ccc;
+  }
+
+button{
+  background-color: var(--Dark-Slate-Grey);
+  color: var(--White);
+  padding: 10px;
+  border-radius: 5px;
+  margin: 10px 0;
+  border: none;
+}
+
+button:hover{
+  background-color: var(--Tomato);
+}
+
+
+
 }
 
 
@@ -10,17 +75,7 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-/*@media (min-width: 715px) {
+@media (min-width: 715px) {
 
 
 img.signup-mobile{
@@ -69,12 +124,10 @@ img.list-icon{
   
 form{
   width: 50%;
-  
   padding: 10px;
   display: flex;
   flex-direction: column;
-
-  }
+}
 
   p,label,h1{
     color: var(--Dark-Slate-Grey);
@@ -109,4 +162,3 @@ button:hover{
 }
 
 }
-*/
