--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Work+Sans:wght@400;500;600&display=swap');
+
+
 :root {
 --Dark-Slate-Grey : hsl(234, 29%, 20%);
 --Charcoal-Grey : hsl(235, 18%, 26%);
